# swagger/swagger.yaml
@@ -340,8 +340,8 @@ definitions:
         type: array
       categorys:
         example:
-        - '["Food"'
-        - ' "Transport"]'
+        - Food
+        - Transport
         items:
           type: string
         type: array
